gitops/radarr-hd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-hd
spec:
  ports:
  - name: app
    port: 80
    targetPort: 7878
    protocol: TCP
    appProtocol: http
  selector:
    app: radarr-hd
