gitops/radarr-hd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-hd
  namespace: radarr-hd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://login.sync.lt/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://login.sync.lt/oauth2/start?rd=$scheme://$best_http_host$escaped_request_uri"
spec:
  tls:
  - hosts:
    - radarr-hd.sync.lt
    secretName: radarr-hd-letsencrypt
  rules:
  - host: radarr-hd.sync.lt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr-hd
            port:
              name: app
